src/org/sosy_lab/java_smt/basicimpl/parser/SmtlibParser.java
/*
 * This file is part of JavaSMT,
 * an API wrapper for a collection of SMT solvers:
 * https://github.com/sosy-lab/java-smt
 *
 * SPDX-FileCopyrightText: 2025 Dirk Beyer <https://www.sosy-lab.org>
 *
 * SPDX-License-Identifier: Apache-2.0
 */

// Generated from Smtlib.g4 by ANTLR 4.13.2
package org.sosy_lab.java_smt.basicimpl.parser;

import edu.umd.cs.findbugs.annotations.SuppressFBWarnings;
import java.util.List;
import org.antlr.v4.runtime.NoViableAltException;
import org.antlr.v4.runtime.Parser;
import org.antlr.v4.runtime.ParserRuleContext;
import org.antlr.v4.runtime.RecognitionException;
import org.antlr.v4.runtime.RuntimeMetaData;
import org.antlr.v4.runtime.Token;
import org.antlr.v4.runtime.TokenStream;
import org.antlr.v4.runtime.Vocabulary;
import org.antlr.v4.runtime.VocabularyImpl;
import org.antlr.v4.runtime.atn.ATN;
import org.antlr.v4.runtime.atn.ATNDeserializer;
import org.antlr.v4.runtime.atn.ParserATNSimulator;
import org.antlr.v4.runtime.atn.PredictionContextCache;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.tree.ParseTreeVisitor;
import org.antlr.v4.runtime.tree.TerminalNode;

@SuppressWarnings({
  "all",
  "warnings",
  "unchecked",
  "unused",
  "cast",
  "CheckReturnValue",
  "this-escape"
})
@SuppressFBWarnings({"NM_METHOD_NAMING_CONVENTION", "SF_SWITCH_NO_DEFAULT"})
public class SmtlibParser extends Parser {
  static {
    RuntimeMetaData.checkVersion("4.13.2", RuntimeMetaData.VERSION);
  }

  static final DFA[] _decisionToDFA;
  protected static final PredictionContextCache _sharedContextCache = new PredictionContextCache();
  public static final int T__0 = 1,
      T__1 = 2,
      T__2 = 3,
      T__3 = 4,
      T__4 = 5,
      T__5 = 6,
      T__6 = 7,
      T__7 = 8,
      T__8 = 9,
      T__9 = 10,
      T__10 = 11,
      T__11 = 12,
      T__12 = 13,
      T__13 = 14,
      T__14 = 15,
      T__15 = 16,
      T__16 = 17,
      T__17 = 18,
      T__18 = 19,
      T__19 = 20,
      T__20 = 21,
      T__21 = 22,
      T__22 = 23,
      T__23 = 24,
      T__24 = 25,
      T__25 = 26,
      T__26 = 27,
      T__27 = 28,
      T__28 = 29,
      T__29 = 30,
      T__30 = 31,
      T__31 = 32,
      T__32 = 33,
      T__33 = 34,
      T__34 = 35,
      T__35 = 36,
      T__36 = 37,
      T__37 = 38,
      T__38 = 39,
      T__39 = 40,
      T__40 = 41,
      Comment = 42,
      White = 43,
      Binary = 44,
      HexaDecimal = 45,
      Numeral = 46,
      Decimal = 47,
      String = 48,
      Simple = 49,
      Quoted = 50,
      Keyword = 51;
  public static final int RULE_boolean = 0,
      RULE_bitvec = 1,
      RULE_float = 2,
      RULE_integer = 3,
      RULE_real = 4,
      RULE_string = 5,
      RULE_literal = 6,
      RULE_symbol = 7,
      RULE_keyword = 8,
      RULE_sort = 9,
      RULE_quantifier = 10,
      RULE_sortedVar = 11,
      RULE_binding = 12,
      RULE_attribute = 13,
      RULE_expr = 14,
      RULE_setInfo = 15,
      RULE_setOption = 16,
      RULE_setLogic = 17,
      RULE_declare = 18,
      RULE_define = 19,
      RULE_push = 20,
      RULE_pop = 21,
      RULE_assert = 22,
      RULE_getAssertions = 23,
      RULE_check = 24,
      RULE_getModel = 25,
      RULE_getCore = 26,
      RULE_getValue = 27,
      RULE_reset = 28,
      RULE_exit = 29,
      RULE_command = 30,
      RULE_smtlib = 31;

  private static String[] makeRuleNames() {
    return new String[] {
      "boolean", "bitvec", "float", "integer", "real", "string", "literal",
      "symbol", "keyword", "sort", "quantifier", "sortedVar", "binding", "attribute",
      "expr", "setInfo", "setOption", "setLogic", "declare", "define", "push",
      "pop", "assert", "getAssertions", "check", "getModel", "getCore", "getValue",
      "reset", "exit", "command", "smtlib"
    };
  }

  static final String[] ruleNames = makeRuleNames();

  private static String[] makeLiteralNames() {
    return new String[] {
      null,
      "'true'",
      "'false'",
      "'('",
      "'fp'",
      "')'",
      "'Bool'",
      "'Int'",
      "'Real'",
      "'_'",
      "'BitVec'",
      "'Float16'",
      "'Float32'",
      "'Float64'",
      "'Float128'",
      "'FloatingPoint'",
      "'Array'",
      "'forall'",
      "'exists'",
      "'as'",
      "'!'",
      "'let'",
      "'set-info'",
      "'set-option'",
      "'set-logic'",
      "'declare-const'",
      "'declare-fun'",
      "'define-const'",
      "'define-fun'",
      "'push'",
      "'pop'",
      "'assert'",
      "'get-assertions'",
      "'check-sat'",
      "'check-sat-assuming'",
      "'get-model'",
      "'get-unsat-core'",
      "'get-unsat-assumptions'",
      "'get-value'",
      "'reset'",
      "'reset-assertions'",
      "'exit'"
    };
  }

  private static final String[] _LITERAL_NAMES = makeLiteralNames();

  private static String[] makeSymbolicNames() {
    return new String[] {
      null,
      null,
      null,
      null,
      null,
      null,
      null,
      null,
      null,
      null,
      null,
      null,
      null,
      null,
      null,
      null,
      null,
      null,
      null,
      null,
      null,
      null,
      null,
      null,
      null,
      null,
      null,
      null,
      null,
      null,
      null,
      null,
      null,
      null,
      null,
      null,
      null,
      null,
      null,
      null,
      null,
      null,
      "Comment",
      "White",
      "Binary",
      "HexaDecimal",
      "Numeral",
      "Decimal",
      "String",
      "Simple",
      "Quoted",
      "Keyword"
    };
  }

  private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
  public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

  /**
   * @deprecated Use {@link #VOCABULARY} instead.
   */
  @Deprecated static final String[] tokenNames;

  static {
    tokenNames = new String[_SYMBOLIC_NAMES.length];
    for (int i = 0; i < tokenNames.length; i++) {
      tokenNames[i] = VOCABULARY.getLiteralName(i);
      if (tokenNames[i] == null) {
        tokenNames[i] = VOCABULARY.getSymbolicName(i);
      }

      if (tokenNames[i] == null) {
        tokenNames[i] = "<INVALID>";
      }
    }
  }

  @Override
  @Deprecated
  public String[] getTokenNames() {
    return tokenNames;
  }

  @Override
  public Vocabulary getVocabulary() {
    return VOCABULARY;
  }

  @Override
  public String getGrammarFileName() {
    return "Smtlib.g4";
  }

  @Override
  public String[] getRuleNames() {
    return ruleNames;
  }

  @Override
  public String getSerializedATN() {
    return _serializedATN;
  }

  @Override
  public ATN getATN() {
    return _ATN;
  }

  public SmtlibParser(TokenStream input) {
    super(input);
    _interp = new ParserATNSimulator(this, _ATN, _decisionToDFA, _sharedContextCache);
  }

  @SuppressWarnings("CheckReturnValue")
  public static class BooleanContext extends ParserRuleContext {
    public BooleanContext(ParserRuleContext parent, int invokingState) {
      super(parent, invokingState);
    }

    @Override
    public int getRuleIndex() {
      return RULE_boolean;
    }

    @Override
    public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
      if (visitor instanceof SmtlibVisitor)
        return ((SmtlibVisitor<? extends T>) visitor).visitBoolean(this);
      else return visitor.visitChildren(this);
    }
  }

  public final BooleanContext boolean_() throws RecognitionException {
    BooleanContext _localctx = new BooleanContext(_ctx, getState());
    enterRule(_localctx, 0, RULE_boolean);
    int _la;
    try {
      enterOuterAlt(_localctx, 1);
      {
        setState(64);
        _la = _input.LA(1);
        if (!(_la == T__0 || _la == T__1)) {
          _errHandler.recoverInline(this);
        } else {
          if (_input.LA(1) == Token.EOF) matchedEOF = true;
          _errHandler.reportMatch(this);
          consume();
        }
      }
    } catch (RecognitionException re) {
      _localctx.exception = re;
      _errHandler.reportError(this, re);
      _errHandler.recover(this, re);
    } finally {
      exitRule();
    }
    return _localctx;
  }

  @SuppressWarnings("CheckReturnValue")
  public static class BitvecContext extends ParserRuleContext {
    public TerminalNode Binary() {
      return getToken(SmtlibParser.Binary, 0);
    }

    public TerminalNode HexaDecimal() {
      return getToken(SmtlibParser.HexaDecimal, 0);
    }

    public BitvecContext(ParserRuleContext parent, int invokingState) {
      super(parent, invokingState);
    }

    @Override
    public int getRuleIndex() {
      return RULE_bitvec;
    }

    @Override
    public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
      if (visitor instanceof SmtlibVisitor)
        return ((SmtlibVisitor<? extends T>) visitor).visitBitvec(this);
      else return visitor.visitChildren(this);
    }
  }

  public final BitvecContext bitvec() throws RecognitionException {
    BitvecContext _localctx = new BitvecContext(_ctx, getState());
    enterRule(_localctx, 2, RULE_bitvec);
    int _la;
    try {
      enterOuterAlt(_localctx, 1);
      {
        setState(66);
        _la = _input.LA(1);
        if (!(_la == Binary || _la == HexaDecimal)) {
          _errHandler.recoverInline(this);
        } else {
          if (_input.LA(1) == Token.EOF) matchedEOF = true;
          _errHandler.reportMatch(this);
          consume();
        }
      }
    } catch (RecognitionException re) {
      _localctx.exception = re;
      _errHandler.reportError(this, re);
      _errHandler.recover(this, re);
    } finally {
      exitRule();
    }
    return _localctx;
  }

  @SuppressWarnings("CheckReturnValue")
  public static class FloatContext extends ParserRuleContext {
    public List<BitvecContext> bitvec() {
      return getRuleContexts(BitvecContext.class);
    }

    public BitvecContext bitvec(int i) {
      return getRuleContext(BitvecContext.class, i);
    }

    public FloatContext(ParserRuleContext parent, int invokingState) {
      super(parent, invokingState);
    }

    @Override
    public int getRuleIndex() {
      return RULE_float;
    }

    @Override
    public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
      if (visitor instanceof SmtlibVisitor)
        return ((SmtlibVisitor<? extends T>) visitor).visitFloat(this);
      else return visitor.visitChildren(this);
    }
  }

  public final FloatContext float_() throws RecognitionException {
    FloatContext _localctx = new FloatContext(_ctx, getState());
    enterRule(_localctx, 4, RULE_float);
    try {
      enterOuterAlt(_localctx, 1);
      {
        setState(68);
        match(T__2);
        setState(69);
        match(T__3);
        setState(70);
        bitvec();
        setState(71);
        bitvec();
        setState(72);
        bitvec();
        setState(73);
        match(T__4);
      }
    } catch (RecognitionException re) {
      _localctx.exception = re;
      _errHandler.reportError(this, re);
      _errHandler.recover(this, re);
    } finally {
      exitRule();
    }
    return _localctx;
  }

  @SuppressWarnings("CheckReturnValue")
  public static class IntegerContext extends ParserRuleContext {
    public TerminalNode Numeral() {
      return getToken(SmtlibParser.Numeral, 0);
    }

    public IntegerContext(ParserRuleContext parent, int invokingState) {
      super(parent, invokingState);
    }

    @Override
    public int getRuleIndex() {
      return RULE_integer;
    }

    @Override
    public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
      if (visitor instanceof SmtlibVisitor)
        return ((SmtlibVisitor<? extends T>) visitor).visitInteger(this);
      else return visitor.visitChildren(this);
    }
  }

  public final IntegerContext integer() throws RecognitionException {
    IntegerContext _localctx = new IntegerContext(_ctx, getState());
    enterRule(_localctx, 6, RULE_integer);
    try {
      enterOuterAlt(_localctx, 1);
      {
        setState(75);
        match(Numeral);
      }
    } catch (RecognitionException re) {
      _localctx.exception = re;
      _errHandler.reportError(this, re);
      _errHandler.recover(this, re);
    } finally {
      exitRule();
    }
    return _localctx;
  }

  @SuppressWarnings("CheckReturnValue")
  public static class RealContext extends ParserRuleContext {
    public TerminalNode Decimal() {
      return getToken(SmtlibParser.Decimal, 0);
    }

    public RealContext(ParserRuleContext parent, int invokingState) {
      super(parent, invokingState);
    }

    @Override
    public int getRuleIndex() {
      return RULE_real;
    }

    @Override
    public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
      if (visitor instanceof SmtlibVisitor)
        return ((SmtlibVisitor<? extends T>) visitor).visitReal(this);
      else return visitor.visitChildren(this);
    }
  }

  public final RealContext real() throws RecognitionException {
    RealContext _localctx = new RealContext(_ctx, getState());
    enterRule(_localctx, 8, RULE_real);
    try {
      enterOuterAlt(_localctx, 1);
      {
        setState(77);
        match(Decimal);
      }
    } catch (RecognitionException re) {
      _localctx.exception = re;
      _errHandler.reportError(this, re);
      _errHandler.recover(this, re);
    } finally {
      exitRule();
    }
    return _localctx;
  }

  @SuppressWarnings("CheckReturnValue")
  public static class StringContext extends ParserRuleContext {
    public TerminalNode String() {
      return getToken(SmtlibParser.String, 0);
    }

    public StringContext(ParserRuleContext parent, int invokingState) {
      super(parent, invokingState);
    }

    @Override
    public int getRuleIndex() {
      return RULE_string;
    }

    @Override
    public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
      if (visitor instanceof SmtlibVisitor)
        return ((SmtlibVisitor<? extends T>) visitor).visitString(this);
      else return visitor.visitChildren(this);
    }
  }

  public final StringContext string() throws RecognitionException {
    StringContext _localctx = new StringContext(_ctx, getState());
    enterRule(_localctx, 10, RULE_string);
    try {
      enterOuterAlt(_localctx, 1);
      {
        setState(79);
        match(String);
      }
    } catch (RecognitionException re) {
      _localctx.exception = re;
      _errHandler.reportError(this, re);
      _errHandler.recover(this, re);
    } finally {
      exitRule();
    }
    return _localctx;
  }

  @SuppressWarnings("CheckReturnValue")
  public static class LiteralContext extends ParserRuleContext {
    public BooleanContext boolean_() {
      return getRuleContext(BooleanContext.class, 0);
    }

    public IntegerContext integer() {
      return getRuleContext(IntegerContext.class, 0);
    }

    public RealContext real() {
      return getRuleContext(RealContext.class, 0);
    }

    public BitvecContext bitvec() {
      return getRuleContext(BitvecContext.class, 0);
    }

    public FloatContext float_() {
      return getRuleContext(FloatContext.class, 0);
    }

    public StringContext string() {
      return getRuleContext(StringContext.class, 0);
    }

    public LiteralContext(ParserRuleContext parent, int invokingState) {
      super(parent, invokingState);
    }

    @Override
    public int getRuleIndex() {
      return RULE_literal;
    }

    @Override
    public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
      if (visitor instanceof SmtlibVisitor)
        return ((SmtlibVisitor<? extends T>) visitor).visitLiteral(this);
      else return visitor.visitChildren(this);
    }
  }

  public final LiteralContext literal() throws RecognitionException {
    LiteralContext _localctx = new LiteralContext(_ctx, getState());
    enterRule(_localctx, 12, RULE_literal);
    try {
      setState(87);
      _errHandler.sync(this);
      switch (_input.LA(1)) {
        case T__0:
        case T__1:
          enterOuterAlt(_localctx, 1);
          {
            setState(81);
            boolean_();
          }
          break;
        case Numeral:
          enterOuterAlt(_localctx, 2);
          {
            setState(82);
            integer();
          }
          break;
        case Decimal:
          enterOuterAlt(_localctx, 3);
          {
            setState(83);
            real();
          }
          break;
        case Binary:
        case HexaDecimal:
          enterOuterAlt(_localctx, 4);
          {
            setState(84);
            bitvec();
          }
          break;
        case T__2:
          enterOuterAlt(_localctx, 5);
          {
            setState(85);
            float_();
          }
          break;
        case String:
          enterOuterAlt(_localctx, 6);
          {
            setState(86);
            string();
          }
          break;
        default:
          throw new NoViableAltException(this);
      }
    } catch (RecognitionException re) {
      _localctx.exception = re;
      _errHandler.reportError(this, re);
      _errHandler.recover(this, re);
    } finally {
      exitRule();
    }
    return _localctx;
  }

  @SuppressWarnings("CheckReturnValue")
  public static class SymbolContext extends ParserRuleContext {
    public TerminalNode Simple() {
      return getToken(SmtlibParser.Simple, 0);
    }

    public TerminalNode Quoted() {
      return getToken(SmtlibParser.Quoted, 0);
    }

    public SymbolContext(ParserRuleContext parent, int invokingState) {
      super(parent, invokingState);
    }

    @Override
    public int getRuleIndex() {
      return RULE_symbol;
    }

    @Override
    public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
      if (visitor instanceof SmtlibVisitor)
        return ((SmtlibVisitor<? extends T>) visitor).visitSymbol(this);
      else return visitor.visitChildren(this);
    }
  }

  public final SymbolContext symbol() throws RecognitionException {
    SymbolContext _localctx = new SymbolContext(_ctx, getState());
    enterRule(_localctx, 14, RULE_symbol);
    int _la;
    try {
      enterOuterAlt(_localctx, 1);
      {
        setState(89);
        _la = _input.LA(1);
        if (!(_la == Simple || _la == Quoted)) {
          _errHandler.recoverInline(this);
        } else {
          if (_input.LA(1) == Token.EOF) matchedEOF = true;
          _errHandler.reportMatch(this);
          consume();
        }
      }
    } catch (RecognitionException re) {
      _localctx.exception = re;
      _errHandler.reportError(this, re);
      _errHandler.recover(this, re);
    } finally {
      exitRule();
    }
    return _localctx;
  }

  @SuppressWarnings("CheckReturnValue")
  public static class KeywordContext extends ParserRuleContext {
    public TerminalNode Keyword() {
      return getToken(SmtlibParser.Keyword, 0);
    }

    public KeywordContext(ParserRuleContext parent, int invokingState) {
      super(parent, invokingState);
    }

    @Override
    public int getRuleIndex() {
      return RULE_keyword;
    }

    @Override
    public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
      if (visitor instanceof SmtlibVisitor)
        return ((SmtlibVisitor<? extends T>) visitor).visitKeyword(this);
      else return visitor.visitChildren(this);
    }
  }

  public final KeywordContext keyword() throws RecognitionException {
    KeywordContext _localctx = new KeywordContext(_ctx, getState());
    enterRule(_localctx, 16, RULE_keyword);
    try {
      enterOuterAlt(_localctx, 1);
      {
        setState(91);
        match(Keyword);
      }
    } catch (RecognitionException re) {
      _localctx.exception = re;
      _errHandler.reportError(this, re);
      _errHandler.recover(this, re);
    } finally {
      exitRule();
    }
    return _localctx;
  }

  @SuppressWarnings("CheckReturnValue")
  public static class SortContext extends ParserRuleContext {
    public SortContext(ParserRuleContext parent, int invokingState) {
      super(parent, invokingState);
    }

    @Override
    public int getRuleIndex() {
      return RULE_sort;
    }

    public SortContext() {}

    public void copyFrom(SortContext ctx) {
      super.copyFrom(ctx);
    }
  }

  @SuppressWarnings("CheckReturnValue")
  public static class SortFloatContext extends SortContext {
    public List<IntegerContext> integer() {
      return getRuleContexts(IntegerContext.class);
    }

    public IntegerContext integer(int i) {
      return getRuleContext(IntegerContext.class, i);
    }

    public SortFloatContext(SortContext ctx) {
      copyFrom(ctx);
    }

    @Override
    public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
      if (visitor instanceof SmtlibVisitor)
        return ((SmtlibVisitor<? extends T>) visitor).visitSortFloat(this);
      else return visitor.visitChildren(this);
    }
  }

  @SuppressWarnings("CheckReturnValue")
  public static class SortBitvecContext extends SortContext {
    public IntegerContext integer() {
      return getRuleContext(IntegerContext.class, 0);
    }

    public SortBitvecContext(SortContext ctx) {
      copyFrom(ctx);
    }

    @Override
    public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
      if (visitor instanceof SmtlibVisitor)
        return ((SmtlibVisitor<? extends T>) visitor).visitSortBitvec(this);
      else return visitor.visitChildren(this);
    }
  }

  @SuppressWarnings("CheckReturnValue")
  public static class SortBoolContext extends SortContext {
    public SortBoolContext(SortContext ctx) {
      copyFrom(ctx);
    }

    @Override
    public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
      if (visitor instanceof SmtlibVisitor)
        return ((SmtlibVisitor<? extends T>) visitor).visitSortBool(this);
      else return visitor.visitChildren(this);
    }
  }

  @SuppressWarnings("CheckReturnValue")
  public static class SortIntContext extends SortContext {
    public SortIntContext(SortContext ctx) {
      copyFrom(ctx);
    }

    @Override
    public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
      if (visitor instanceof SmtlibVisitor)
        return ((SmtlibVisitor<? extends T>) visitor).visitSortInt(this);
      else return visitor.visitChildren(this);
    }
  }

  @SuppressWarnings("CheckReturnValue")
  public static class SortRealContext extends SortContext {
    public SortRealContext(SortContext ctx) {
      copyFrom(ctx);
    }

    @Override
    public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
      if (visitor instanceof SmtlibVisitor)
        return ((SmtlibVisitor<? extends T>) visitor).visitSortReal(this);
      else return visitor.visitChildren(this);
    }
  }

  @SuppressWarnings("CheckReturnValue")
  public static class SortArrayContext extends SortContext {
    public List<SortContext> sort() {
      return getRuleContexts(SortContext.class);
    }

    public SortContext sort(int i) {
      return getRuleContext(SortContext.class, i);
    }

    public SortArrayContext(SortContext ctx) {
      copyFrom(ctx);
    }

    @Override
    public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
      if (visitor instanceof SmtlibVisitor)
        return ((SmtlibVisitor<? extends T>) visitor).visitSortArray(this);
      else return visitor.visitChildren(this);
    }
  }

  public final SortContext sort() throws RecognitionException {
    SortContext _localctx = new SortContext(_ctx, getState());
    enterRule(_localctx, 18, RULE_sort);
    try {
      setState(121);
      _errHandler.sync(this);
      switch (getInterpreter().adaptivePredict(_input, 2, _ctx)) {
        case 1:
          _localctx = new SortBoolContext(_localctx);
          enterOuterAlt(_localctx, 1);
          {
            setState(93);
            match(T__5);
          }
          break;
        case 2:
          _localctx = new SortIntContext(_localctx);
          enterOuterAlt(_localctx, 2);
          {
            setState(94);
            match(T__6);
          }
          break;
        case 3:
          _localctx = new SortRealContext(_localctx);
          enterOuterAlt(_localctx, 3);
          {
            setState(95);
            match(T__7);
          }
          break;
        case 4:
          _localctx = new SortBitvecContext(_localctx);
          enterOuterAlt(_localctx, 4);
          {
            setState(96);
            match(T__2);
            setState(97);
            match(T__8);
            setState(98);
            match(T__9);
            setState(99);
            integer();
            setState(100);
            match(T__4);
          }
          break;
        case 5:
          _localctx = new SortFloatContext(_localctx);
          enterOuterAlt(_localctx, 5);
          {
            setState(113);
            _errHandler.sync(this);
            switch (_input.LA(1)) {
              case T__10:
                {
                  setState(102);
                  match(T__10);
                }
                break;
              case T__11:
                {
                  setState(103);
                  match(T__11);
                }
                break;
              case T__12:
                {
                  setState(104);
                  match(T__12);
                }
                break;
              case T__13:
                {
                  setState(105);
                  match(T__13);
                }
                break;
              case T__2:
                {
                  setState(106);
                  match(T__2);
                  setState(107);
                  match(T__8);
                  setState(108);
                  match(T__14);
                  setState(109);
                  integer();
                  setState(110);
                  integer();
                  setState(111);
                  match(T__4);
                }
                break;
              default:
                throw new NoViableAltException(this);
            }
          }
          break;
        case 6:
          _localctx = new SortArrayContext(_localctx);
          enterOuterAlt(_localctx, 6);
          {
            setState(115);
            match(T__2);
            setState(116);
            match(T__15);
            setState(117);
            sort();
            setState(118);
            sort();
            setState(119);
            match(T__4);
          }
          break;
      }
    } catch (RecognitionException re) {
      _localctx.exception = re;
      _errHandler.reportError(this, re);
      _errHandler.recover(this, re);
    } finally {
      exitRule();
    }
    return _localctx;
  }

  @SuppressWarnings("CheckReturnValue")
  public static class QuantifierContext extends ParserRuleContext {
    public QuantifierContext(ParserRuleContext parent, int invokingState) {
      super(parent, invokingState);
    }

    @Override
    public int getRuleIndex() {
      return RULE_quantifier;
    }

    @Override
    public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
      if (visitor instanceof SmtlibVisitor)
        return ((SmtlibVisitor<? extends T>) visitor).visitQuantifier(this);
      else return visitor.visitChildren(this);
    }
  }

  public final QuantifierContext quantifier() throws RecognitionException {
    QuantifierContext _localctx = new QuantifierContext(_ctx, getState());
    enterRule(_localctx, 20, RULE_quantifier);
    int _la;
    try {
      enterOuterAlt(_localctx, 1);
      {
        setState(123);
        _la = _input.LA(1);
        if (!(_la == T__16 || _la == T__17)) {
          _errHandler.recoverInline(this);
        } else {
          if (_input.LA(1) == Token.EOF) matchedEOF = true;
          _errHandler.reportMatch(this);
          consume();
        }
      }
    } catch (RecognitionException re) {
      _localctx.exception = re;
      _errHandler.reportError(this, re);
      _errHandler.recover(this, re);
    } finally {
      exitRule();
    }
    return _localctx;
  }

  @SuppressWarnings("CheckReturnValue")
  public static class SortedVarContext extends ParserRuleContext {
    public SymbolContext symbol() {
      return getRuleContext(SymbolContext.class, 0);
    }

    public SortContext sort() {
      return getRuleContext(SortContext.class, 0);
    }

    public SortedVarContext(ParserRuleContext parent, int invokingState) {
      super(parent, invokingState);
    }

    @Override
    public int getRuleIndex() {
      return RULE_sortedVar;
    }

    @Override
    public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
      if (visitor instanceof SmtlibVisitor)
        return ((SmtlibVisitor<? extends T>) visitor).visitSortedVar(this);
      else return visitor.visitChildren(this);
    }
  }

  public final SortedVarContext sortedVar() throws RecognitionException {
    SortedVarContext _localctx = new SortedVarContext(_ctx, getState());
    enterRule(_localctx, 22, RULE_sortedVar);
    try {
      enterOuterAlt(_localctx, 1);
      {
        setState(125);
        match(T__2);
        setState(126);
        symbol();
        setState(127);
        sort();
        setState(128);
        match(T__4);
      }
    } catch (RecognitionException re) {
      _localctx.exception = re;
      _errHandler.reportError(this, re);
      _errHandler.recover(this, re);
    } finally {
      exitRule();
    }
    return _localctx;
  }

  @SuppressWarnings("CheckReturnValue")
  public static class BindingContext extends ParserRuleContext {
    public SymbolContext symbol() {
      return getRuleContext(SymbolContext.class, 0);
    }

    public ExprContext expr() {
      return getRuleContext(ExprContext.class, 0);
    }

    public BindingContext(ParserRuleContext parent, int invokingState) {
      super(parent, invokingState);
    }

    @Override
    public int getRuleIndex() {
      return RULE_binding;
    }

    @Override
    public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
      if (visitor instanceof SmtlibVisitor)
        return ((SmtlibVisitor<? extends T>) visitor).visitBinding(this);
      else return visitor.visitChildren(this);
    }
  }
